--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<font face="Arial Black">
 		<div style="position:fixed;left:350px;top:450px;width:300px;height:200px;">
-		<img src="jack v1.PNG" width="170" height="250"
+		<img src="Jack v1.PNG" width="170" height="250"
 		style="position:fixed;top:450px;right:1100px;">
 		<head><font size="+3"> Jack </font><head>
 		<p> It is a rank lower than the queen, but it is the fifth strongest card in big two </p>
